--- a/index.html
+++ b/index.html
@@ -1,71 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Contact List</title>
+    <title>Filterable List</title>
 </head>
-
 <body>
     <div class="container">
-        <h1 class="text-center">My <span class="text-red">Contact</span></h1>
-        <br />
-        <input type="text" id="filter" name="filter" class="form-control" placeholder="Search Names..." />
-        <br />
-        <ul class="list-group-flush">
-            <li class="list-group-item">
-                <h5>A</h5>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Abe</a>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Alice</a>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Adam</a>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Anna</a>
-            </li>
-            <li class="list-group-item">
-                <h5>B</h5>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Bob</a>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Bill</a>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Boston</a>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Brad</a>
-            </li>
-            <li class="list-group-item">
-                <h5>C</h5>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Carrie</a>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Chris</a>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">Christina</a>
-            </li>
-            <li class="list-group-item contact-name">
-                <a href="">CCCCC</a>
-            </li>
-        </ul>
+        <h1 class="text-center"><span class="text-danger">My</span> Contact</h1>
+        <br>
+        <input type="text" id="filter" name="filter" class="form-control" placeholder="Search Names...">
+        <br>
+        <section>
+            <ul class="list-group">
+                <li class="list-group-item"><h5>A</h5></li>
+                <li class="list-group-item"><a href="">Abe</a></li>
+                <li class="list-group-item"><a href="">Alice</a></li>
+                <li class="list-group-item"><a href="">Adam</a></li>
+                <li class="list-group-item"><a href="">Anna</a></li>
+                <li class="list-group-item"><a href="">Annie</a></li>
+                <li class="list-group-item"><h5>B</h5></li>
+                <li class="list-group-item"><a href="">Bob</a></li>
+                <li class="list-group-item"><a href="">Bill</a></li>
+                <li class="list-group-item"><a href="">Boston</a></li>
+                <li class="list-group-item"><a href="">Brad</a></li>
+                <li class="list-group-item"><h5>C</h5></li>
+                <li class="list-group-item"><a href="">Charlie</a></li>
+                <li class="list-group-item"><a href="">Cliff</a></li>
+                <li class="list-group-item"><a href="">Chris</a></li>
+                <li class="list-group-item"><a href="">Christina</a></li>
+            </ul>
+        </section>
     </div>
     <script src="main.js"></script>
 </body>
-
 </html>
